--- a/index.html
+++ b/index.html
@@ -9,6 +9,154 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    
+    <div class="sidenav" id="mySidenav">
+        <p class="logo">
+            <span>UG</span>-BeeTech
+        </p>
+        <a href="#" class="icon-a">
+            <i class="fa fa-dashboard icons"></i>
+            &nbsp;&nbsp;Dashboard
+        </a>
+        <a href="#" class="icon-a">
+            <i class="fa fa-users icons"></i>
+            &nbsp;&nbsp;Customers
+        </a>
+        <a href="#" class="icon-a">
+            <i class="fa fa-list icons"></i>
+            &nbsp;&nbsp;Projects
+        </a>
+        <a href="#" class="icon-a">
+            <i class="fa fa-shopping-bag icons"></i>
+            &nbsp;&nbsp;Orders
+        </a>
+        <a href="#" class="icon-a">
+            <i class="fa fa-tasks icons"></i>
+            &nbsp;&nbsp;Inventory
+        </a>
+        <a href="#" class="icon-a">
+            <i class="fa fa-user icons"></i>
+            &nbsp;&nbsp;Accounts
+        </a>
+        <a href="#" class="icon-a">
+            <i class="fa fa-list-alt icons"></i>
+            &nbsp;&nbsp;Tasks
+        </a>
+    </div>
+    <div class="main">
+        <div class="head">
+            <div class="col-div-6">
+                <span class="nav" style="font-size: 30px; cursor: pointer; color: white;">
+                    &#9776;Dashboard
+                </span>
+                <span class="nav2" style="font-size: 30px; cursor: pointer; color: white;">
+                    &#9776;Dashboard
+                </span>
+            </div>
+            <div class="col-div-6">
+                <div class="profile">
+                    <img src="./images/admin.png" class="prog-img">
+                    <p>Miguel Angel Perez Garcia <span>UI/UX Designer</span></p>
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+        <div class="clearfix"></div>
+        <br>
+        <div class="col-div-3">
+            <div class="box">
+                <p>
+                    1587 <br>
+                    <span>Customers</span>
+                    <i class="fa fa-users box-icon"></i>
+                </p>
+            </div>
+        </div>
+        <div class="col-div-3">
+            <div class="box">
+                <p>
+                    5000 <br>
+                    <span>Projects</span>
+                    <i class="fa fa-list box-icon"></i>
+                </p>
+            </div>
+        </div>
+        <div class="col-div-3">
+            <div class="box">
+                <p>
+                    10852 <br>
+                    <span>Orders</span>
+                    <i class="fa fa-shopping-bag box-icon"></i>
+                </p>
+            </div>
+        </div>
+        <div class="col-div-3">
+            <div class="box">
+                <p>
+                    62 <br>
+                    <span>Tasks</span>
+                    <i class="fa fa-tasks box-icon"></i>
+                </p>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+        <br><br>
+        <div class="col-div-8">
+            <div class="box-8">
+                <div class="content-box">
+                    <p>Top Selling Projects <span>Sell All</span></p>
+                    <br>
+                    <table>
+                        <tr>
+                            <th>Company</th>
+                            <th>Contact</th>
+                            <th>Country</th>
+                        </tr>
+                        <tr>
+                            <td>DICIS</td>
+                            <td>Angel</td>
+                            <td>Salamanca</td>                            
+                        </tr>
+                        <tr>
+                            <td>UG</td>
+                            <td>Miguel</td>
+                            <td>Guanajuato</td>                            
+                        </tr>
+                        <tr>
+                            <td>DICIVA</td>
+                            <td>Juan</td>
+                            <td>Irapuato</td>                            
+                        </tr>
+                        <tr>
+                            <td>DCEA</td>
+                            <td>José</td>
+                            <td>León</td>                            
+                        </tr>
+                        <tr>
+                            <td>DCNE</td>
+                            <td>Juan</td>
+                            <td>Celaya</td>                            
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="col-div-8">
+            <div class="box-4">
+                <div class="content-box">
+                    <p>Total Sale <span>Sell All</span></p>
+                    <div class="circle-wrap">
+                        <div class="mask-full">
+                            <div class="fill"></div>
+                        </div>
+                        <div class="mask-half">
+                            <div class="fill"></div>
+                        </div>
+                        <div class="inside-circle">80%</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+    </div>
 </body>
 </html>
